<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/black"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/name_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingRight="30dp"
                    android:textColor="@color/white"
                    android:textColorLink="#000" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/name_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:gravity="center_vertical"
                    android:paddingRight="30dp"
                    android:text="0"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="0dp"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"

                    android:weightSum="4">


                    <Button
                        android:id="@+id/button_clear"
                        style="@style/button_clear_style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:layout_marginRight="5dp"
                        android:text="@string/b_c" />




                    <Button
                        android:id="@+id/button_delete"
                        style="@style/butt_sym"

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/b_del"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1.49"
                        tools:ignore="Suspicious0dp" />

                    <Button
                        android:id="@+id/button_divide"
                        style="@style/butt_sym"

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/b_d"
                        tools:ignore="Suspicious0dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <Button
                        android:id="@+id/button_7"
                        style="@style/button_style"

                        android:layout_height="match_parent"
                        android:text="@string/b7"/>


                    <Button
                        android:id="@+id/button_8"
                        style="@style/button_style"
                        android:layout_height="match_parent"
                        android:text="@string/b8"  />


                    <Button
                        android:id="@+id/button_9"
                        style="@style/button_style"
                        android:text="@string/b9" />

                    <Button
                        android:id="@+id/button_multi"
                        style="@style/butt_sym"
                        android:text="@string/b_ml" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <Button
                        android:id="@+id/button_4"
                        style="@style/button_style"
                        android:text="@string/b4" />


                    <Button
                        android:id="@+id/button_5"
                        style="@style/button_style"
                        android:text="@string/b5" />


                    <Button
                        android:id="@+id/button_6"
                        style="@style/button_style"
                        android:text="@string/b6" />

                    <Button
                        android:id="@+id/button_minus"
                        style="@style/butt_sym"
                        android:text="@string/b_m" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <Button
                        android:id="@+id/button_1"
                        style="@style/button_style"
                        android:text="@string/b1" />


                    <Button
                        android:id="@+id/button_2"
                        style="@style/button_style"
                        android:text="@string/b2" />


                    <Button
                        android:id="@+id/button_3"
                        style="@style/button_style"
                        android:text="@string/b3" />

                    <Button
                        android:id="@+id/button_plus"
                        style="@style/butt_sym"
                        android:text="@string/b_p" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/button_0"
                        style="@style/button_style"
                        android:text="0" />


                    <Button
                        android:id="@+id/button_dot"
                        style="@style/button_style"
                        android:text="." />

                    <Button
                        android:id="@+id/button_go"
                        style="@style/button_go_style"
                        android:text="=" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>